	  (2016-02-02).
	* apps/netutils/netlib:  Add utility functions to support accesses
	  to the ARP table (2016-02-08).
	* apps/netutils/dhcpd: DHCPD no longer calls directly into the
	  OS but uses the new network IOCTL commands to modify the ARP
	  table (2016-02-08).
	* apps/nshlib:  Add an 'arp' command that will support access to
	  the OS ARP table (2016-02-08).
	* apps/nshlib: 'ps' command will show CPU if SMP is enabled
	  (2016-02-19).
	* apps/examples/leds: An example to demonstrate use of LED
	  driver (2016-02-20).
	* apps/examples/smp:  Add a test to verify SMP configurations
	  (2016-02-21).
	* apps/examples/rgbled:  Example using the RGB LED driver to
	  drive an RGB LED via PWM.  From Alan Carvalho de Assis
	  (2016-02-23).
	* apps/platform/sabre-6quad:  Add a platform directory for the
	  Sabre 6Quad board (2016-03-01).
	* apps/examples/ostest:  Add a test of TLS (2016-03-11).
	* apps/modbus/nuttx/portserial.c:  Was not returning an error
	  on failure to open the device driver.  From Olololshka kokoko
	  (2016-03-16).
	* apps/examples/sched_note:  Add a simple example to exercise
	  the scheduler instrumentation logic.  Kind of buggy right now
	  (2016-03-17).
	* apps/system/cdcacm, usbmsc, and composite, apps/examples/usbserial,
	  composite, usbterm:  Use new boardctl() instead of calling directly
	  in the OS when possible.  There are still a few bad OS calls for
	  USB device interfaces that do not yet have boardctl() commands
	  (2016-03-25).

7.16 2016-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/system/sdcard:  Remove the SD card application.  This
	  application violates OS/application interface rules and has been
	  moved to Obsoleted/apps/system/sdcard (2016-03-29).
	* apps/examples/alarm:  Add a simple test of the ALARM iotcl calls
	  of the RTC driver (2016-04-03).
	* apps/examples/nximage:  No configuration option to select
	  greyscale.
	* apps/canutils/uavcan: Update UAVCAN version.  From Paul Alexander
	  Patience (2016-05-03)