@@ -1,7 +1,7 @@
 ############################################################################
 # apps/examples/module/Makefile
 #
-#   Copyright (C) 2015 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2015-2016 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -35,6 +35,10 @@
 
 -include $(TOPDIR)/.config
 -include $(TOPDIR)/Make.defs
+
+OBJEXT ?= .o
+DELIM ?= /
+
 include $(APPDIR)/Make.defs
 
 # Module example built-in application info
