@@ -1,7 +1,7 @@
 ############################################################################
 # examples/elf/tests/hello/Makefile
 #
-#   Copyright (C) 2012 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2012, 2016 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -41,6 +41,7 @@ SRCS = $(BIN).c
 OBJS = $(SRCS:.c=.o)
 
 all: $(BIN)
+.PHONY: clean install
 
 $(OBJS): %.o: %.c
 	@echo "CC: $<"
