@@ -1,7 +1,7 @@
 ############################################################################
 # apps/examples/usbserial/Makefile
 #
-#   Copyright (C) 2008, 2010-2012 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2008, 2010-2012, 2016 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
