@@ -1,7 +1,7 @@
 ############################################################################
 # apps/examples/usbserial/Makefile.host
 #
-#   Copyright (C) 2008, 2011, 2015 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2008, 2011, 2015-2016 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -37,27 +37,28 @@
 
 -include $(TOPDIR)/Make.defs
 
-SRC	= host.c
-BIN	= host$(EXEEXT)
+SRC = host.c
+BIN = host$(EXEEXT)
 
-DEFINES	=
+DEFINES =
 ifeq ($(CONFIG_EXAMPLES_USBSERIAL_INONLY),y)
-DEFINES	+= -DCONFIG_EXAMPLES_USBSERIAL_INONLY=1
+DEFINES += -DCONFIG_EXAMPLES_USBSERIAL_INONLY=1
 endif
 ifeq ($(CONFIG_EXAMPLES_USBSERIAL_OUTONLY),y)
-DEFINES	+= -DCONFIG_EXAMPLES_USBSERIAL_OUTONLY=1
+DEFINES += -DCONFIG_EXAMPLES_USBSERIAL_OUTONLY=1
 endif
 ifeq ($(CONFIG_EXAMPLES_USBSERIAL_ONLYSMALL),y)
-DEFINES	+= -DCONFIG_EXAMPLES_USBSERIAL_ONLYSMALL=1
+DEFINES += -DCONFIG_EXAMPLES_USBSERIAL_ONLYSMALL=1
 endif
 ifeq ($(CONFIG_EXAMPLES_USBSERIAL_ONLYBIG),y)
-DEFINES	+= -DCONFIG_EXAMPLES_USBSERIAL_ONLYBIG=1
+DEFINES += -DCONFIG_EXAMPLES_USBSERIAL_ONLYBIG=1
 endif
 ifeq ($(CONFIG_CDCACM),y)
-DEFINES	+= -DCONFIG_CDCACM=1
+DEFINES += -DCONFIG_CDCACM=1
 endif
 
 all: $(BIN)
+.PHONY: clean
 
 $(BIN): $(SRC)
 	@$(HOSTCC) $(HOSTCFLAGS) $(DEFINES) $^ -o $@
